--- a/toDo.txt
+++ b/toDo.txt
@@ -2,8 +2,5 @@ bug protrait lors de l'évolution
 balance
 contenu
 online :
-    - utilisation Objets
-    - victoire/défaite
-    - mort en combat
     - css menu Online
-    - bug : mana et hp ne se mette pas a jour réellement
+    - intégrer théo
