--- a/toDo.txt
+++ b/toDo.txt
@@ -1,5 +1,5 @@
-    -bug potidex pop up
-    -rendre indisponible les objets en multi            
+    -bug drag n drop
+    -bug potidex pop up    
     -nettoyer les sources (code mort + facto)
     -secure sql inject
     -always data -> mysql
@@ -14,6 +14,7 @@
         -ajouter des skills
         -faire des cartes cohérentes
     -gérer la mort des potimons
+    -retravailler l'affichage
 
 var repli = fetchSkill(130)
 var player = {id : '927aa551-90d3-59ff-2a57-f9985d89d208'}
