--- a/toDo.txt
+++ b/toDo.txt
@@ -9,10 +9,12 @@
         -ajouter des skills
         -faire des cartes cohérentes
     -gérer la mort des potimons
-    -retravailler l'affichage :
-        -revoir affichage main menu        
-        -background skills en combat
-        -background info en combat
+    -retravailler l'affichage :                              
+        -espacer btn carte        
+        -resize portraits
+        -revoir affichage du menu skill, detail
+        -image background se répete
+        -altération état : dessin
 
 -string escape (interpolation)
 -orm pour node : sequelize
@@ -20,3 +22,4 @@
 -faire des clés étrangères partout
 -faire de la CI ?
 https://medium.com/@patrykcieszkowski/jwt-authentication-in-express-js-ee898b87a60
+
