--- a/toDo.txt
+++ b/toDo.txt
@@ -1,5 +1,4 @@
-    -authentication en mémoire dans le local storage   
-    -afficher expérience sous forme de progress bar dans detail
+    -authentication en mémoire dans le local storage       
     -nettoyer les sources (code mort + facto)    
     -always data -> mysql    
     -revoir la fusion    
@@ -10,8 +9,7 @@
         -faire des cartes cohérentes
     -gérer la mort des potimons
     -retravailler l'affichage :                                             
-        -resize portraits
-        -revoir affichage du menu skill, detail        
+        -resize portraits              
         -altération état : dessin
         -revoir affichage menu drag n drop
 
@@ -22,3 +20,5 @@
 -faire de la CI ?
 https://medium.com/@patrykcieszkowski/jwt-authentication-in-express-js-ee898b87a60
 
+
+gimp-2.8 -i -b '(test "D:\dev\testGimp\Portrait\" "D:\dev\testGimp\Portrait\Result" "" "GIF" "90" "1500" "1500" FALSE "")' -b '(gimp-quit 0)'
