--- a/toDo.txt
+++ b/toDo.txt
@@ -1,3 +1,4 @@
+    -ajout pierre d'évolutions
     -nettoyer les sources (code mort + facto)          
     -revoir le systeme tour par tour pour inclure la vitesse ?
     -revoir la fusion            
